--- a/templates/users/signin.html
+++ b/templates/users/signin.html
@@ -18,5 +18,5 @@
          <button type="submit" class="btn btn-success btn-block">Sign In</button>
          <div class="line line-dashed"></div>
          <p class="text-muted text-center"><small>Do not have an account ?</small></p>
-         <a href="/accounts/signup/" class="btn btn-info btn-block">Signup for Network Practice</a>
+         <a href="/users/signup/" class="btn btn-info btn-block">Signup for Network Practice</a>
         </form>
