--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -24,5 +24,5 @@
             <button type="submit" class="btn btn-info btn-block">Signup for Network Practice</button>
             <div class="line line-dashed"></div>
             <p class="text-muted text-center"><small>Already have an account?</small></p>
-            <a href="/users/sigin/" class="btn btn-white btn-block">Sign In</a>
+            <a href="/users/signin/" class="btn btn-white btn-block">Sign In</a>
           </form>
