--- a/templates/users/signin.html
+++ b/templates/users/signin.html
@@ -1,4 +1,4 @@
-      <form role="form" method="post" action="" class="panel-body">
+      <form role="form" method="post" action="/api/signin/" class="panel-body">
         {% csrf_token %}
         <div class="form-group">
            <input name="username_or_email" type="text" placeholder="Username or e-mail" class="form-control"
