--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -1,4 +1,4 @@
-        <form  id="signup-form" role="form" method = "post" action="" class="panel-body">
+        <form  id="signup-form" role="form" method = "post" action="/api/signup/" class="panel-body">
           {% csrf_token %}
             <div class="form-group">
               <label class="control-label">Email</label>
