--- a/templates/problems/post_problem.html
+++ b/templates/problems/post_problem.html
@@ -68,6 +68,22 @@
                 </div>
             
         </div>
+        <div class="form-row field-description">
+                <div>        
+                        <label for="id_x">X:</label>
+                        
+                        <textarea class="vLargeTextField" cols="40" id="id_x" name="X" rows="10"></textarea> 
+                </div>
+            
+        </div>
+        <div class="form-row field-description">
+                <div>        
+                        <label for="id_y">Y:</label>
+                        
+                        <textarea class="vLargeTextField" cols="40" id="id_y" name="Y" rows="10"></textarea> 
+                </div>
+            
+        </div>
         <div class="form-row field-tags">
                 <div>
                         <label class="required" for="id_tags">Tags:</label>
