--- a/templates/problems/post_problem.html
+++ b/templates/problems/post_problem.html
@@ -69,6 +69,14 @@
             
         </div>
         <div class="form-row field-description">
+                <div>
+                        <label for="id_position">Position:</label>
+
+                        <textarea class="vLargeTextField" cols="40" id="id_position" name="position" rows="10"></textarea>
+                </div>
+
+        </div>
+        <div class="form-row field-description">
                 <div>        
                         <label for="id_x">X:</label>
                         
